# kyc_agent_Nordvik

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
data/synthetic/: golden_set.json
eval/: generate_golden_set.py  results.json  run_eval.py
src/kyc_agent/: __init__.py  config.py
src/kyc_agent/api/: __init__.py  main.py  schemas.py  service.py
src/kyc_agent/audit/: __init__.py  sink.py
src/kyc_agent/graph/: __init__.py  builder.py  context.py  nodes.py  state.py
src/kyc_agent/llm/: __init__.py  base.py  factory.py  fake.py  live.py  resilience.py
src/kyc_agent/observability/: __init__.py  logging.py
src/kyc_agent/persistence/: __init__.py  db.py
src/kyc_agent/rules/: __init__.py  ids.py  risk.py  validation.py
src/kyc_agent/schemas/: __init__.py  case.py  decisions.py  documents.py
src/kyc_agent/tools/: __init__.py  registries.py
tests/: conftest.py
tests/integration/: test_api.py  test_graph_flow.py
tests/unit/: test_fake_services.py  test_registries.py  test_resilience.py  test_risk_rules.py  test_validation_rules.py
