[project]
name = "kyc-agent"
version = "0.1.0"
description = "Multi-agent KYC document processing pipeline for Nordvik (LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "psycopg[binary,pool]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kyc_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["kyc_agent"]
# LangChain/LangGraph ship partial type stubs; keep strictness for our own code.
ignore_missing_imports = true
